styles/Home.module.css
/* .testFont {
  font-family: 'Newake'
} */

.container {
  color: red;
  padding: 0 2rem;
}

.main {
  min-height: 100vh;
  padding: 4rem 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/* .footer {
  display: flex;
  flex: 1;
  padding: 2rem 0;
  border-top: 1px solid #eaeaea;
  justify-content: center;
  align-items: center;
  position: fixed;
  bottom: 0; 
} */

.footer a {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
}

.title a {
  color: #0070f3;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.title {
  margin: 0;
  line-height: 1.15;
  font-size: 4rem;
}

.title,
.description {
  text-align: center;
}

.description {
  margin: 4rem 0;
  line-height: 1.5;
  font-size: 1.5rem;
}

.code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-size: 1.1rem;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 800px;
}

.card {
  margin: 1rem;
  padding: 1.5rem;
  text-align: left;
  color: inherit;
  text-decoration: none;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  transition: color 0.15s ease, border-color 0.15s ease;
  max-width: 300px;
}

.card:hover,
.card:focus,
.card:active {
  color: #0070f3;
  border-color: #0070f3;
}

.card h2 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
}

.card p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5;
}

.logo {
  height: 1em;
  margin-left: 0.5rem;
}

@media (max-width: 600px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
}
/* connect.js */
.connect {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%; 
  border-width:2px;
  /* border-style: solid;
  border-color: white; */
  margin-top: 150px;
}

.tourDates {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%; 
  font-family: BebasNeue;
  font-size: 40px;
  
  /* margin-bottom: 0px; */
}

.connectContactUs {
  padding: 0px;
}

.connectContactForm {
  display: flex;
  flex-direction: row;
  justify-content: center;  
}

.form {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center; 
  align-content: space-evenly;

  /* transform: scale(1.5) */
  
 
}


.input {
  border: none;
  background-color: transparent;
}

/* music.js */

.music {
  display: flex;
  flex-direction: column;
  border-width:2px;
  justify-content: space-around;
  padding-left: 25px;
  padding-right: 25px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.flexContainer {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  flex-flow: column wrap;
  justify-content: center;
  align-items: center;  
}

.about {
  font-size: x-large;
  
  padding-top: 25px;
  padding-left: 20px;
  padding-right: 20px;
  color: white;
}

.aboutHeader {
  
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%; 
  font-family: BebasNeue;
  font-size: 20px;
}

/* shows.js */
.shows {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-top: 75px;
  /* flex: 1 1 160px;
  margin: 10px; */

  
  /* max-width: 30%; */
  /* justify-content: center; */
  font-size: large;
 
  
  /* padding-left: 125px;
  padding-right: 125px;
  padding-top: 50px */
}

.showElements {
  
  margin-left: 125px;
  margin-bottom: 5px;
 
  
  
  

  
}
 

/* navbar.js */
.navbar {
  display: flex;
  flex-direction: row;
  justify-content: center;  
  width: 100%;
  justify-content: space-around; 
  border: none;
  margin-top: -25px;  
}


.navLink {
  text-align: center;
}

/* header.js */
.SkoloLogo {
  display: flex;
  flex-direction: column;
  width: auto;
  align-items: center;
  height: 200px;
  background: transparent no-repeat center;
  background-size: cover; 
  cursor: pointer;
}

@media screen and (max-width: 768px) {
  .buttonbg {
    width: 50px;
  }
  
}

@font-face {
  font-family: 'BebasNeue';
  src: url('../public/BebasNeue-Regular.ttf');
  font-weight: 400;
  font-style: normal;
  }

.overlayHeader {

    height: 400px;
    width: 100%;
    text-align: center;
    padding-top: 100px;
    color: white;
    overflow: hidden;
    background: #C04848;  /* fallback for old browsers */
    background: linear-gradient(rgb(72,0,72,0.8), rgb(192,72,72,0.8));
   
    background-size: cover;
    background-repeat: no-repeat;
}

@media screen and (max-width: 600px)
{
  
}

/* .explore-links {
  padding: 50px;
} */

